<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_garage"
        android:icon="@drawable/garage_48px"
        android:title="@string/title_garage" />

    <item
        android:id="@+id/navigation_payments"
        android:icon="@drawable/payments_48px"
        android:title="@string/title_add_payment" />

    <item
        android:id="@+id/navigation_statistic"
        android:icon="@drawable/graphics_48px"
        android:title="@string/title_statistic" />

    <item
        android:id="@+id/navigation_warehouse"
        android:icon="@drawable/warehouse_48px"
        android:title="@string/title_warehouse" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/config_48px"
        android:title="@string/title_settings" />

</menu>